contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/multisig/fail/non_struct_input.rs
// UI (trybuild) negative test: `#[multisig]` must be applied to a struct.

#[common_macros::multisig]
pub enum NotAStruct {
    A,
}

fn main() {}
